# sdoc

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README  README.md  build.sh  release.sh
ci/: .before_deploy.sh.swp  before_deploy.sh  install.sh  script.sh
pkg/brew/: sdoc.rb
snapshot-tests/: run.sh  util.sh
snapshot-tests/snapshots/: allow_editor_to_be_configured_when_editing_config.snap  enable_viewing_a_script_command.snap  execute_a_command_with_required_args.snap  execute_command_when_dependencies_are_satisfied_with_command.snap  execute_command_when_dependencies_are_satisfied_with_envar.snap  return_non-zero_exit_code_when_EDITOR_environment_variable_is_not_set_when_editing_a_command.snap  return_non-zero_exit_code_when_EDITOR_environment_variable_is_not_set_when_editing_config.snap  show_autocomplete_for_available_commands.snap  show_autocomplete_for_help_command.snap  show_command_usage_when_args_are_insufficient.snap  show_command_usage_when_dependency_check_fails_for_command.snap  show_command_usage_when_dependency_check_fails_for_envar.snap  show_help_for_config_command.snap  show_help_for_view_command.snap  show_help_message_when_no_arguments_are_supplied.snap  show_help_message_when_unknown_command_is_given.snap
src/: app.rs  cli.rs  init.rs  lib.rs  main.rs  test_helper.rs
src/commands/: edit.rs  editconfig.rs  help.rs  help_test.rs  init.rs  mod.rs  node.rs  shell.rs  shell_test.rs  util.rs  view.rs
src/config/: mod.rs  test.rs
src/core/: mod.rs  test_helper.rs
src/dto/: mod.rs  test.rs
src/model/: mod.rs  test.rs
src/util/: mod.rs  test.rs
src/workflow/: mod.rs  test.rs
test/: run.sh  util.sh
test/snapshots/: execute_a_script_command.snap  execute_sub_command.snap  pass_arguments_to_script_correctly.snap  show_autocomplete_for_available_commands.snap  show_autocomplete_for_help_command.snap  show_autocomplete_for_view_command.snap  (+8 more)
tests/: common.rs  general.rs  help.rs  init.rs  main.rs  node.rs
(+34 files in other folders)
