[package]
name = "sdoc"
version = "0.4.0"
authors = ["Matthew Woodruff <mwoodruf@thoughtworks.com>"]
description = "Framework for building custom CLIs around shell, scripts, and executables"
repository = "https://github.com/matthewwoodruff/sdoc"
homepage = "https://github.com/matthewwoodruff/sdoc"
readme = "README.md"
license = "LGPL-2.1"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[badges]
travis-ci = { repository = "matthewwoodruff/sdoc" }

[[bin]]
name = "sdoc"
path = "src/main.rs"

[dependencies]
serde_derive = "1.0.11"
serde = "1.0.11"
serde_yaml = "0.7.3"
